--- a/ticketing.html
+++ b/ticketing.html
@@ -228,12 +228,15 @@ th {
     Pakistan Railways, Sukkur Division</p>
   </div>
 
-  <div class="text-section">
-    The Sukkur Division operates <strong>27 POS stations</strong>, providing
-    <strong>24/7 ticketing and reservation services</strong>.
-    <p>TVMs are installed at Rohri and Rahimyar Khan.</p>
-    <p>Reservations available via RABTA app and official website.</p>
-  </div>
+  <div class="text-section"> The Sukkur Division operates <strong>27 POS stations</strong>,
+    providing <strong>24/7 ticketing and reservation services</strong>.
+    Ticket Vending Machines (TVMs) are installed at <strong>Rohri and Rahimyar Khan</strong>, offering convenient reservation options.
+    <p>All main line stations, as well as major branch line stations, are equipped for <strong>computerized ticketing</strong>,
+      and work is underway to extend this facility to the remaining branch line stations.</p> 
+    <p>Passengers can also make reservations through the <strong>RABTA mobile app</strong> and the <strong>Pakistan Railways website</strong>,
+    ensuring flexibility and convenience.</p> 
+    <p> A dedicated <strong>IT server room</strong> at the Sukkur Reservation Office is staffed by IT personnel from <strong>8:00 AM to midnight</strong>, providing technical support for mobile and website users, 
+      as well as assisting remote stations with troubleshooting and ticketing issues.</p> </div>
 </div>
 
 <!-- ================= FOOTER ================= -->
@@ -241,9 +244,8 @@ th {
   <div class="panel-row">
     <div class="apps">
       <strong>Download Apps</strong><br>
-      <a href="https://play.google.com/store/apps/details?id=com.easyway.ticket.app" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg">
-      </a>
+   <a href="https://play.google.com/store/apps/details?id=com.easyway.ticket.app&pli=1" target="_blank"> 
+     <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play"> </a>
       <a href="https://apps.apple.com/pk/app/rabta/id6446243993" target="_blank">
         <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg">
       </a>
@@ -262,6 +264,7 @@ th {
   </div>
 </div>
 
+  
 <!-- ================= MODAL ================= -->
 <div id="seatModal" class="modal">
   <div class="modal-content">
