--- a/ticketing.html
+++ b/ticketing.html
@@ -199,7 +199,7 @@ nav a:hover {
   </div>
 
   <div class="header-center">
-    Pakistan Railways – Sukkur Division
+    Pakistan Railways – Sukkur Division(Ticketing)
   </div>
 
   <div class="header-right">
