--- a/ticketing.html
+++ b/ticketing.html
@@ -155,6 +155,7 @@ nav a:hover {
 }
 
 /* ================= FULLSCREEN MODAL ================= */
+/* ================= FULLSCREEN MODAL ================= */
 .modal {
   display: none;
   position: fixed;
@@ -163,30 +164,43 @@ nav a:hover {
   z-index: 9999;
 }
 
+/* Wrapper */
 .modal-content {
   width: 100%;
   height: 100%;
-  background: white;
+  background: #fff;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
+/* Close button */
 .close-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
+  position: fixed;
+  top: env(safe-area-inset-top, 10px);
+  right: env(safe-area-inset-right, 10px);
   z-index: 10000;
-  font-size: 28px;
+  font-size: 22px;
   cursor: pointer;
-  background: red;
+  background: #d32f2f;
   color: white;
-  padding: 4px 14px;
-  border-radius: 5px;
+  padding: 6px 14px;
+  border-radius: 6px;
 }
 
+/* IFRAME */
 .modal iframe {
+  flex: 1;
   width: 100%;
-  height: 100%;
   border: none;
+}
+
+/* ===== MOBILE FIX ===== */
+@media (max-width: 768px) {
+  .close-btn {
+    font-size: 20px;
+    padding: 6px 12px;
+  }
 }
 </style>
 </head>
@@ -280,7 +294,8 @@ nav a:hover {
 <div id="ticketModal" class="modal">
   <div class="modal-content">
     <span class="close-btn" onclick="closeTicketing()">✖</span>
-    <iframe src="https://www.pakrailways.gov.pk/buy"></iframe>
+   <iframe   src="https://www.pakrailways.gov.pk/buy"  allowfullscreen></iframe>
+
   </div>
 </div>
 
