--- a/ticketing.html
+++ b/ticketing.html
@@ -14,7 +14,6 @@ body {
 }
 
 /* ================= HEADER ================= */
-
 .main-header {
   background-color: #2e7d32;
   color: white;
@@ -24,14 +23,12 @@ body {
   justify-content: space-between;
 }
 
-/* Left & Right logos */
 .header-left img,
 .header-right img {
   height: 50px;
   width: auto;
 }
 
-/* Center title */
 .header-center {
   font-size: 22px;
   font-weight: bold;
@@ -39,13 +36,11 @@ body {
   flex: 1;
 }
 
-/* Logos alignment */
 .header-left,
 .header-right {
   width: 60px;
   text-align: center;
 }
-
 
 /* ================= NAV ================= */
 nav {
@@ -155,7 +150,6 @@ nav a:hover {
 }
 
 /* ================= FULLSCREEN MODAL ================= */
-/* ================= FULLSCREEN MODAL ================= */
 .modal {
   display: none;
   position: fixed;
@@ -164,7 +158,6 @@ nav a:hover {
   z-index: 9999;
 }
 
-/* Wrapper */
 .modal-content {
   width: 100%;
   height: 100%;
@@ -172,9 +165,9 @@ nav a:hover {
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
-/* Close button */
 .close-btn {
   position: fixed;
   top: env(safe-area-inset-top, 10px);
@@ -188,18 +181,26 @@ nav a:hover {
   border-radius: 6px;
 }
 
-/* IFRAME */
 .modal iframe {
   flex: 1;
   width: 100%;
+  height: 100%;
   border: none;
+  min-width: 320px; /* ensures mobile minimum width */
+  transform-origin: top left;
 }
 
-/* ===== MOBILE FIX ===== */
+/* ================= MOBILE SCALING FIX ================= */
 @media (max-width: 768px) {
   .close-btn {
     font-size: 20px;
     padding: 6px 12px;
+  }
+
+  .modal iframe {
+    transform: scale(0.95);
+    width: 105%;
+    height: 105%;
   }
 }
 </style>
@@ -207,19 +208,21 @@ nav a:hover {
 
 <body>
 
+<!-- ================= HEADER ================= -->
 <header class="main-header">
   <div class="header-left">
     <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Pakistan Railways Logo">
   </div>
 
   <div class="header-center">
-    Pakistan Railways – Sukkur Division(Ticketing)
+    Pakistan Railways – Sukkur Division (Ticketing)
   </div>
 
   <div class="header-right">
     <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150" alt="Division Logo">
   </div>
 </header>
+
 <!-- ================= NAV ================= -->
 <nav>
   <a href="index.html">Home</a>
@@ -234,7 +237,7 @@ nav a:hover {
 <!-- ================= ONLINE BOOKING BUTTON ================= -->
 <div class="booking-panel">
   <h3>Online Ticket Booking (Official)</h3>
-   <button onclick="openTicketing()">Book Tickets Online</button>
+  <button onclick="openTicketing()">Book Tickets Online</button>
 </div>
 
 <!-- ================= CONTENT ================= -->
@@ -294,8 +297,7 @@ nav a:hover {
 <div id="ticketModal" class="modal">
   <div class="modal-content">
     <span class="close-btn" onclick="closeTicketing()">✖</span>
-   <iframe  src="https://www.pakrailways.gov.pk"  allowfullscreen></iframe>
-
+    <iframe src="https://www.pakrailways.gov.pk/buy" allowfullscreen></iframe>
   </div>
 </div>
 
