--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@ header {
 <script>
 // Array of YouTube video links
 const videos = [
-  { url: "https://www.youtube.com/embed/VIDEO_ID1", title: "Video 1" },
+  { url: "https://youtu.be/6aW1KYOQzw8", title: "Khanpur Inspection" },
   { url: "https://www.youtube.com/embed/VIDEO_ID2", title: "Video 2" },
   { url: "https://www.youtube.com/embed/VIDEO_ID3", title: "Video 3" },
   { url: "https://www.youtube.com/embed/VIDEO_ID4", title: "Video 4" },
