--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>YouTube Video Gallery</title>
+<title>Video Gallery</title>
 <style>
 body {
   font-family: Arial, sans-serif;
@@ -72,7 +72,7 @@ header {
 </head>
 <body>
 
-<header>YouTube Video Gallery</header>
+<header>Video Gallery</header>
 
 <div class="video-gallery" id="videoGallery">
   <!-- Video items will be injected here -->
