--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@ header {
 // Array of YouTube video links
 const videos = [
   { url: "https://www.youtube.com/embed/6aW1KYOQzw8", title: "Khanpur Inspection" },
-  { url: "https://www.youtube.com/embed/VIDEO_ID2", title: "Video 2" },
+  { url: "https://www.youtube.com/embed/TybV8BkjkvE", title: "Jamalo Train Initiative" },
   { url: "https://www.youtube.com/embed/VIDEO_ID3", title: "Video 3" },
   { url: "https://www.youtube.com/embed/VIDEO_ID4", title: "Video 4" },
   { url: "https://www.youtube.com/embed/VIDEO_ID5", title: "Video 5" },
