--- a/gallery.html
+++ b/gallery.html
@@ -83,7 +83,7 @@ header {
 const videos = [
   { url: "https://www.youtube.com/embed/6aW1KYOQzw8", title: "Khanpur Inspection" },
   { url: "https://www.youtube.com/embed/TybV8BkjkvE", title: "Jamalo Train Initiative" },
-  { url: "https://www.youtube.com/embed/VIDEO_ID3", title: "Video 3" },
+  { url: "https://www.youtube.com/embed/yT8yL9KTQr4", title: "14-August-25, DS Office Sukkur" },
   { url: "https://www.youtube.com/embed/VIDEO_ID4", title: "Video 4" },
   { url: "https://www.youtube.com/embed/VIDEO_ID5", title: "Video 5" },
   { url: "https://www.youtube.com/embed/VIDEO_ID6", title: "Video 6" }
