--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,24 @@ header {
   text-align: center;
   font-size: 22px;
 }
+/* ================= NAV ================= */
+nav {
+  background-color: rgba(0, 0, 50, 0.9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav a:hover {
+  background-color: #1a237e;
+}
 
 /* Gallery Table */
 .video-gallery {
