--- a/gallery.html
+++ b/gallery.html
@@ -91,7 +91,19 @@ nav a:hover {
 <body>
 
 <header>Video Gallery</header>
-
+<!-- MENU -->
+<nav>
+  <a href="index.html">Home</a>
+  <!--
+  <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="complaint.html">Register Complaint</a>
+  <a href="contactus.html">Contact Us</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="tracking.html" class="blink-tracking">Train Tracking</a>
+  -->
+</nav>
 <div class="video-gallery" id="videoGallery">
   <!-- Video items will be injected here -->
 </div>
