--- a/index.html
+++ b/index.html
@@ -367,10 +367,17 @@ function toggleMenu() {
 
   <!-- Facebook Link -->
   <div style="margin-bottom:6px;">
+    
     <a href="https://facebook.com/dssukkur1" target="_blank" style="color:#1877f2; font-size:18px; text-decoration:none;">
       <i class="fab fa-facebook"></i> Follow us on Facebook
     </a>
   </div>
+  <!-- YouTube Link -->
+<div style="margin-bottom:6px;">
+  <a href="https://www.youtube.com/@pakrailsuk" target="_blank" style="color:#ff0000; font-size:18px; text-decoration:none;">
+    <i class="fab fa-youtube"></i> Subscribe on YouTube
+  </a>
+</div>
 
   <div>Pakistan Railways Sukkur Division</div>
   <div>Developed &amp; Powered by IT Dept: Sukkur Division</div>
