--- a/trackTrain.html
+++ b/trackTrain.html
@@ -20,6 +20,7 @@
 <button onclick="loadTrain()">Show Status</button>
 
 <div class="card" id="status"></div>
+<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 
 <script src="train.js"></script>
 </body>
