--- a/availSeats.html
+++ b/availSeats.html
@@ -28,7 +28,7 @@ Date:
 <div id="results"></div>
 
 <script>
-const GAS_URL = "YOUR_GAS_WEBAPP_URL";
+const GAS_URL = "https://script.google.com/macros/s/AKfycbxIK397B-pelGligxVrMJaibWfIrEM13lipzrHf3MD9tq5woVBPxboNO2g191rn1TNF/exec";
 
 // ---------- Load Stations ----------
 fetch(`${GAS_URL}?action=stations`)
